--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ button {
     color: white;
     height: 40px;
     width: 50%;
-    display: flow-root;
+    display: block;
     float: left;
 }
 
